--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1 style="font-size:50px;">John Doe</h1>
         <p>Python Programmer</p>
     </div>
+</div>
     <main>
         <div id="main">
             <article class="main-articles">
