fixing github pages

--- a/index.html
+++ b/index.html
@@ -1,97 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="css/main.css">
-    </style>
+    <title>Karina's Portolio</title>
+    <link rel="stylesheet" href="css/kqstyleportfolio.css">
 </head>
+
 <body>
     <nav>
         <ul>
-            <li>Karina's Portfolio</li>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="http://www.google.com">Link 2</a></li>
-            <li><a href="page3.html">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
+            <li>portfolio</li>
+            <li><a href="https://www.facebook.com/profile.php?id=100005087507655">my bio</a></li>
+            <li><a href="www.linkedin.com/in/kquenta">my work</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100005087507655">my gallery</a></li>
         </ul>
     </nav>
     <div class="hero-image">
         <div class="hero-text">
-            <h1 style="font-size:50px;">John Doe</h1>
-        <p>Python Programmer</p>
+            <h1 style="font-size: 50px;">hello world, i am karina quenta</h1>
+            <p>software engineer in the making</p>
+        </div>
     </div>
-</div>
     <main>
         <div id="main">
             <article class="main-articles">
-                <h1>Title A</h1>
-                <strong></small>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, archi</strong>
-                <p>Lorem, ipsum dolor sit amet consectetcimus optio soluta sint dolor qui. Dignissimos ipsa repudiandae itaque perspiciatis consequuntur illo cum consequatur, nostrum non harum laborum voluptas nam voluptatem suscipit voluptate doloribus.
-                Nobis ratione tempore quae commodi cum voluptates accusamus alias delectus perspiciatis consequuntur! Fugiat cupiditate, ea, cum officia voluptatum doloremque tempore temporibus maxime labore ipsam et, dignissimos consectetur molestiae aperiam quod!</p>
+                <h1>about me</h1>
+                <p>i am currently learning to become a software engineer. i am a quick learner and am excited to begin
+                    my bootcamp. i love to be organized and enjoy spending my time to fix broken things, so i hope that
+                    translates over to my career in software engineering. i am a team player and will continue to spread
+                    positivity. i love seeing people succeed so i will always be a helping hand.</p>
             </article>
             <article class="main-articles">
-                <h1>Title B</h1>
-                <strong></small>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, archi</strong>
-                <figure>
-                    <img src="http://placehold.it/400x200">
-                    <figcaption><em>I love the view!</em></figcaption</figcaption>
-                </figure>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem rerum pariatur dolore incidunt laboriosam cum quis minus, suscipit porro possimus illo earum aut, expedita quod nihil ipsum. Ullam, dignissimos?
-                Suscipit ratione culpa incidunonsgni dolorem animi inventore recusandae deleniti earum aliquid ducimus fuga aliquam sed cum ratione libero quibusdam? Odio harum magni blanditiis sint tempora cupiditate, totam facere.
-                Atque, quae recusandae repudiandae amet ducimus optio soluta sint dolor qui. Dignissimos ipsa repudiandae itaque perspiciatis consequuntur illo cum consequatur, nostrum non harum laborum voluptas nam voluptatem suscipit voluptate doloribus.
-                Nobis ratione tempore quae commodi cum voluptates accusamus alias delectus perspiciatis consequuntur! Fugiat cupiditate, ea, cum officia voluptatum doloremque tempore temporibus maxime labore ipsam et, dignissimos consectetur molestiae aperiam quod!</p>
+                <h1>my travels</h1>
+                <p>i enjoy traveling as much as i can. for the last few years i have been traveling and have enjoyed exploring. i have
+                    gone to many states and abroad. to name a few, i have gone to an all-inclusive resort in jamaica,
+                    which is one of the best memories. i have also gone to puerto rico for a reggae fastival, maui and
+                    honolulu, as well as portugal. i visited paris in 2021 with my family, and enjoyed as many fresh
+                    croissants as possible. view my gallery for pictures of my travels.</p>
             </article>
             <article class="main-articles">
-                <h1>Title C</h1>
-                <strong></small>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, archi</strong>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem rerum pariatur dolore incidunt laboriosam cum quis minus, suscipit porro possimus illo earum aut, expedita quod nihil ipsum. Ullam, dignissimos?
-                Suscipit ratione culnihil magni dolorem animi inventore recusandae deleniti earum aliquid ducimus fuga aliquam sed cum ratione libero quibusdam? Odio harum magni blanditiis sint tempora cupiditate, totam facere.
-                Atque, quae recusandae repudiandae amet ducimus optio soluta sint dolor qui. Dignissimos ipsa repudiandae itaque perspiciatis consequuntur illo cum consequatur, nostrum non harum laborum voluptas nam voluptatem suscipit voluptate doloribus.
-                Nobis ratione tempore quae commodi cum voluptates accusamus alias delectus perspiciatis consequuntur! Fugiat cupiditate, ea, cum officia voluptatum doloremque tempore temporibus maxime labore ipsam et, dignissimos consectetur molestiae aperiam quod!</p>
+                <h1>my family</h1>
+                <p>i have a close knit family that lives in california around the bay area. my family is from bolivia,
+                    in south america, and i have visited twice when i was younger. i have an older brother who is a
+                    product designer and lives with his wife in san francisco. i have a 12 year old dog names sebastian,
+                    who was named after the little mermaids protector. he is a sweet boy and enjoys playing catch.</p>
             </article>
-
         </div>
         <div id="side">
             <article class="side-articles" id="profile">
-                <img id="profile-image" src="images/Paris me.png">
+                <img id="profile-image" src="images/foodfestivalme.jpeg">
                 <div id="profile-details">
-                    <h2>Sebastian Quenta</h2>
-                        <ul>
-                            <li>123 Dog Way</li>
-                            <li>Rover, CA 12345</li>
-                            <li>(800)888-9999</li>
-                            <li><a href="mailto:sebs@gmail.com">sebs@gmail.com</a></li>
-                        </ul>
+                    <h2>details</h2>
+                    <br>
+                    <ul>
+                        <li>name: karina quenta</li>
+                        <br>
+                        <li>location: san leandro, ca</li>
+                        <br>
+                        <li>contact me via email:</li>
+                        <br>
+                        <li><a href="mailto:karinaxquenta@gmail.com">karinaxquenta@gmail.com</a></li>
+                    </ul>
                 </div>
-                <article class="side-articles">
-                    <h1>Title D</h1>
-                    <strong></small>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, archi</strong>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem rerum pariatur dolore incidunt laboriosam cum quis minus, suscipit porro possimus illo earum aut, expedita quod nihil ipsum. Ullam, dignissimos?
-                    Suscipit ratione culpa incidunt necessites accusamus alias delectus perspiciatis consequuntur! Fugiat cupiditate, ea, cum officia voluptatum doloremque tempore temporibus maxime labore ipsam et, dignissimos consectetur molestiae aperiam quod!
-                </p>
-            </article>    
-            <article class="side-articles">
-                <h1>Contact Me!</h1>
-                <strong><small>Please contact me with questions</small></strong>
+        </div>
+        </article>
+
+        <article class="contactinfo">
+            <h1>where would you like to travel?</h1>
+            <!-- <strong><small>reach out to me</small></strong> -->
+            <br>
+            <form action="mailto:karinaxquenta@gmail.com" method="POST">
+                <label for="name"><strong>your name</strong></label>
                 <br>
-                <form action="mailto:sebastianq@gmail.com" method="POST">
-                    <label for="name"><strong>Name</strong></label>
-                    <br>
-                    <input type="text" id="name" placeholder="Your Name">
-                    <br>
-                    <label for="body"><strong>Message</strong></label>
-                    <textarea id="body" placeholder="You Message" rows="5"></textarea>
-                </form>
+                <input type="text" id="name" placeholder="enter name here">
+                <br>
+                <label for="body"><strong>message me below</strong></label>
+                <br>
+                <textarea id="body" placeholder="send me a messages here" rows="10"></textarea>
+            </form>
+        </article>
         </div>
     </main>
-    <footer>
-        <hr>
-        <div>
-            &copy Sebastian Quenta 2023
-        </div>
-    </footer>
+    </div>
 </body>
+
 </html>
